--- a/Py13_Assignment1.ipynb
+++ b/Py13_Assignment1.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -224,6 +224,33 @@
     "volume = (4 * pi * radius ** 3)/3\n",
     "\n",
     "print(\"The required volume is: \", volume)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program which accepts a sequence of comma-separated numbers from console and generate a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input some comma seprated numbers : 1,2,3,4,4,5\n",
+      "List :  ['1', '2', '3', '4', '4', '5']\n"
+     ]
+    }
+   ],
+   "source": [
+    "values = input(\"Input some comma seprated numbers : \")\n",
+    "list = values.split(\",\")\n",
+    "print('List : ',list)"
    ]
   },
   {
