--- a/Py13_Assignment1.ipynb
+++ b/Py13_Assignment1.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,16 +183,27 @@
      "output_type": "stream",
      "text": [
       "Enter your first name: Navojit\n",
-      "Enter your second name: Basu\n",
-      "Hello is my last name Basuand Navojit\n"
+      "Enter your second name: Basu\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'usaB tijovaN'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "first_name = input(\"Enter your first name: \")\n",
     "last_name = input(\"Enter your second name: \")\n",
     "\n",
-    "print(\"Hello is my last name \" + last_name + \" and \" + first_name)\n"
+    "full_name = first_name + \" \" + last_name\n",
+    "\n",
+    "full_name[::-1]"
    ]
   },
   {
