--- a/Py13_Assignment1.ipynb
+++ b/Py13_Assignment1.ipynb
@@ -265,6 +265,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a Python program to reverse a word after accepting the input from the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: AcadGild\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'dliGdacA'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word = input('Enter a word: ')\n",
+    "\n",
+    "word[::-1]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
