--- a/Py13_Assignment1.ipynb
+++ b/Py13_Assignment1.ipynb
@@ -301,6 +301,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the below pattern using nested for loop in Python.\n",
+    "*\n",
+    "* *\n",
+    "* * *\n",
+    "* * * *\n",
+    "* * * * *\n",
+    "* * * *\n",
+    "* * *\n",
+    "* *\n",
+    "*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * \n",
+      "* * * \n",
+      "* * \n",
+      "* \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    for j in range(i+1):\n",
+    "        print(\"*\" , end=\" \")\n",
+    "    \n",
+    "    print() #to print in new rows \n",
+    "    \n",
+    "for j in range(i+1):\n",
+    "    for k in range(5-j):\n",
+    "         print(\"*\" , end=\" \")\n",
+    "    \n",
+    "    print()\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
